# data-contracts-studio

./: .env.dev  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  package.json  podman-compose.dev.yml  podman-compose.yml  test_auto_gen_debug.py  test_auto_generation.py
.github/workflows/: ci-cd.yml  release.yml
backend/: .env.example  .flake8  Dockerfile  Dockerfile.podman  FIELD_VALIDATION_ENHANCEMENT.md  README.md  alembic.ini  main.py  migrate_field_names.py  pyproject.toml  requirements.txt  run_tests.py  test_auto_generation.py  test_enhanced_validation.py  test_validation.py
backend/alembic/: env.py
backend/alembic/versions/: 72bedcc45e01_initial_migration.py
backend/app/: __version__.py
backend/app/api/: contracts.py
backend/app/core/: config.py  database.py
backend/app/models/: contract.py
backend/app/schemas/: contract.py
backend/app/services/: auto_generation_service.py  contract_service.py
backend/data/: README.md
backend/scripts/: __init__.py  migrate_field_names.py  run_tests.py  run_tests_new.py
backend/scripts/migration/: __init__.py
backend/tests/: conftest.py  test_main.py
backend/tests/data/: test_csv_payload.json  test_payload.json
backend/tests/integration/: __init__.py  test_field_validation_integration.py
backend/tests/unit/: __init__.py  test_auto_generation.py  test_auto_generation_clean.py  test_auto_generation_comprehensive.py  test_auto_generation_service.py  test_enhanced_validation.py  test_enhanced_validation_clean.py  test_field_validation.py  test_validation.py  test_validation_clean.py
backend/utils/: __init__.py  debug_sanitize.py
docs/: VERSIONING.md
docs/deployment/: PODMAN_DEPLOYMENT.md  README.md
docs/examples/: sample-users.csv  sample-users.json
frontend/: .env.example  Dockerfile  Dockerfile.podman  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  index.css  version.ts
frontend/src/components/common/: Button.tsx  FileUpload.tsx  Footer.tsx  Input.tsx  Modal.tsx  SystemInfo.tsx  ThemeToggle.tsx  VersionBadge.tsx
frontend/src/components/contracts/: ContractCard.tsx
frontend/src/components/forms/: AutoGenerateForm.tsx  ContractForm.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useContracts.ts
frontend/src/pages/: HomePage.tsx
frontend/src/services/: api.ts  contractService.ts  versionService.ts
frontend/src/types/: contract.ts
scripts/: check-version-sync.sh  check-version.sh  deploy-github-pages.sh  deploy-podman.sh  deploy-server.sh  deploy.sh  release.sh  setup-dev.sh  setup-podman-security.sh  test-version-endpoints.sh
systemd/: data-contracts-studio-db.service  data-contracts-studio-pod.service
